--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -27,7 +27,8 @@ android {
         versionCode = flutter.versionCode
         versionName = flutter.versionName
         minSdkVersion 23  // Change this from 21 to 23
-        targetSdkVersion 33  // Or whatever version you're targeting
+        targetSdkVersion 33// Or whatever version you're targeting
+        multiDexEnabled true
     }
 
     buildTypes {
