--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,9 +35,13 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  lottie: ^2.2.0
   flutter_signin_button: ^2.0.0
   firebase_auth: ^5.0.0
   google_sign_in: ^6.0.0
+  cloud_firestore: ^5.6.0
+  provider: ^6.1.2
+  fluttertoast: ^8.2.10
 
 dev_dependencies:
   flutter_test:
