--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   cloud_firestore: ^5.6.0
   provider: ^6.1.2
   fluttertoast: ^8.2.10
+  location:
+  google_maps_flutter:
 
 dev_dependencies:
   flutter_test:
